--- a/client/views/index.html
+++ b/client/views/index.html
@@ -33,14 +33,14 @@ Duncan Robertson. Student number: 8074833 -->
       // Function to load the contents of the page
       function loadPage() {
         Promise.resolve()
-        .then(() => {
+        /*.then(() => {
           return $.post('getUserProfile.php');
         })
         .then((post) => {
           setUserProfile(post);
-        })
+        })*/
         .then(() => {
-          return $.post('/getTopProfiles.php');
+          return $.post('getTopProfiles.php');
         })
         .then((posts) => {
           setTopProfiles(posts);
@@ -65,7 +65,7 @@ Duncan Robertson. Student number: 8074833 -->
           <div class="gallery_upper">\
             <img src="" height="50px" class="profile" id="userProfileImage">\
             <h4>\
-            <a href="/postList?id='+userProfile._id+'" style="text-decoration: none; font-size: 25px;color: aliceblue;"><span id="userProfileUsername"></span></a> \
+            <a href="/postList?id='+userProfile.ID+'" style="text-decoration: none; font-size: 25px;color: aliceblue;"><span id="userProfileUsername"></span></a> \
               <img alt="verified" src="../img/icons/icon4.png">\
               <p id="userProfileFullName"></p>\
             </h4>\
@@ -95,19 +95,19 @@ Duncan Robertson. Student number: 8074833 -->
         } else {
           for (var j = 0; j < postsCount; j++) {
             $('#postContainer0').append('<div class="thumbnail">\
-                <a href="" id="link' + userProfile._id + j + '">\
-                  <img src="" class="cards" id="thumbnail0' + userProfile._id + j +'"/>\
+                <a href="" id="link' + userProfile.ID + j + '">\
+                  <img src="" class="cards" id="thumbnail0' + userProfile.ID + j +'"/>\
                 </a>\
                 <h4>\
-                  <img src="../img/icons/icon2.png" id="like0' + userProfile._id + j +'"  height="15px" alt="Likes">\
-                  <i id="popularity0' + userProfile._id + j +'"></i>\
-                  <img src="../img/icons/icon5.png" id="feedback0' + userProfile._id + j +'"  height="15px" alt="Feedbacks">\
-                  <i id="feedbackCount0' + userProfile._id + j +'"></i>\
+                  <img src="../img/icons/icon2.png" id="like0' + userProfile.ID + j +'"  height="15px" alt="Likes">\
+                  <i id="popularity0' + userProfile.ID + j +'"></i>\
+                  <img src="../img/icons/icon5.png" id="feedback0' + userProfile.ID + j +'"  height="15px" alt="Feedbacks">\
+                  <i id="feedbackCount0' + userProfile.ID + j +'"></i>\
                 </h4>\
-                <p class="text_column" id="status0' + userProfile._id + j +'"></p>\
-                <p class="tag" id="hastag0' + userProfile._id + j +'"></p>\
+                <p class="text_column" id="status0' + userProfile.ID + j +'"></p>\
+                <p class="tag" id="hastag0' + userProfile.ID + j +'"></p>\
               </div>');
-            setPostsContent(userProfile._id, j, true);
+            setPostsContent(userProfile.ID, j, true);
           }
         }
       }
@@ -127,38 +127,38 @@ Duncan Robertson. Student number: 8074833 -->
           <div class="gallery_upper">\
             <img src="" height="50px" class="profile" id="topProfileImage' + i + '">\
             <h4>\
-            <a href="/postList?id='+topProfiles[i]._id+'" style="text-decoration: none; font-size: 25px;color: aliceblue;"><span id="topProfileUsername' + i + '"></span></a> \
+            <a href="/postList?id='+topProfiles[i].ID+'" style="text-decoration: none; font-size: 25px;color: aliceblue;"><span id="topProfileUsername' + i + '"></span></a> \
               <img alt="verified" src="../img/icons/icon4.png">\
               <p id="topProfileFullName' + i + '"></p>\
             </h4>\
-            <button id="follow'+ topProfiles[i]._id + '" >Follow</button>\
+            <button id="follow'+ topProfiles[i].ID + '" >Follow</button>\
           </div>\
-          <div id="postContainer' + topProfiles[i]._id + '">\
+          <div id="postContainer' + topProfiles[i].ID + '">\
           </div>\
         </div>');
         
-         $('#follow' + topProfiles[i]._id).attr('onclick','followerClick("follow' + topProfiles[i]._id + '", "' + topProfiles[i]._id + '")');
-        isFollow("follow" +topProfiles[i]._id , topProfiles[i]._id );
+         $('#follow' + topProfiles[i].ID).attr('onclick','followerClick("follow' + topProfiles[i].ID + '", "' + topProfiles[i].ID + '")');
+        isFollow("follow" +topProfiles[i].ID , topProfiles[i].ID );
         addPosts(topProfiles, i);
       }
     
       // Function to add Posts html to Post Container
       function addPosts(topProfiles, i){
         for (var j = 0; j < 4; j++) {
-          $('#postContainer' + topProfiles[i]._id).append('<div class="thumbnail">\
-              <a href="" id="link' + topProfiles[i]._id + j + '">\
-                <img src="" class="cards" id="thumbnail' + topProfiles[i]._id + j +'"/>\
+          $('#postContainer' + topProfiles[i].ID).append('<div class="thumbnail">\
+              <a href="" id="link' + topProfiles[i].ID + j + '">\
+                <img src="" class="cards" id="thumbnail' + topProfiles[i].ID + j +'"/>\
               </a>\
               <h4>\
-                <img src="../img/icons/icon2.png" id="like' + topProfiles[i]._id + j +'"  height="15px" alt="Likes">\
-                <i id="popularity' + topProfiles[i]._id + j +'"></i>\
-                <img src="../img/icons/icon5.png" id="feedback' + topProfiles[i]._id + j +'"  height="15px" alt="Feedbacks">\
-                <i id="feedbackCount' + topProfiles[i]._id + j +'"></i>\
+                <img src="../img/icons/icon2.png" id="like' + topProfiles[i].ID + j +'"  height="15px" alt="Likes">\
+                <i id="popularity' + topProfiles[i].ID + j +'"></i>\
+                <img src="../img/icons/icon5.png" id="feedback' + topProfiles[i].ID + j +'"  height="15px" alt="Feedbacks">\
+                <i id="feedbackCount' + topProfiles[i].ID + j +'"></i>\
               </h4>\
-              <p class="text_column" id="status' + topProfiles[i]._id + j +'"></p>\
-              <p class="tag" id="hastag' + topProfiles[i]._id + j +'"></p>\
+              <p class="text_column" id="status' + topProfiles[i].ID + j +'"></p>\
+              <p class="tag" id="hastag' + topProfiles[i].ID + j +'"></p>\
             </div>');
-          setPostsContent(topProfiles[i]._id, j, false);
+          setPostsContent(topProfiles[i].ID, j, false);
         }
       }
     
@@ -173,7 +173,7 @@ Duncan Robertson. Student number: 8074833 -->
       function setPostsContent(id, j, check){
         Promise.resolve()
         .then(() => {
-          return $.post('getPostsContent', {id: id, max: 4});
+          return $.post('getPostsContent.php', {id: id, max: 4});
         })
         .then((posts) => {
           var postsContent = posts;
@@ -185,10 +185,10 @@ Duncan Robertson. Student number: 8074833 -->
             {
               id = '0' + id;
             } 
-            $("#link" + id + j).attr('href', '/post/' + postsContent[j]._id);
+            $("#link" + id + j).attr('href', '/post/' + postsContent[j].ID);
             $('#thumbnail' + id + j).attr("src","../img/instagram_img/" + postsContent[j].image);
            
-            var postid = postsContent[j]._id;
+            var postid = postsContent[j].ID;
             var likeCountTag = "popularity" + id + j;
             
             var likeIconIDTag = "like" + id + j;
