Forgot password function

--- a/client/views/forgotPassword.html
+++ b/client/views/forgotPassword.html
@@ -54,17 +54,21 @@ Duncan Robertson. Student number: 8074833 -->
 	                } else {
 	                	Promise.resolve()
 	                    .then(function(){
-	                        return $.post('passwordreset', {email: email, password: password});
+	                        return $.post('/server/server.php', 'type=sendEmail' + '&email=' + email + '&password=' + password);
 	                    })
 	                    .then(function(data){
-	                    	$('#error').html(data.message);
-	                    	if(data.isValid)
+	                    	if(!data.isValid)
 	                    	{
-	                              $('#error').css('color','#ffffff');
-	                              $('#desc').addClass('hide');
-	                              $('#resetForm').addClass('hide');
+	                    		  $('#error').html(data.message);
 	                    	}
 	                    })
+	                    .catch(e => {
+	                       $('#error').html("Your Account has been reset! </br> Please check your email to confirm");
+	                       $('#error').css('color','#ffffff');
+	                       $('#desc').addClass('hide');
+	                       $('#resetForm').addClass('hide');
+	                    });
+	                    
                 	}
             	});
             });
