--- a/client/views/loginAndRegistration.html
+++ b/client/views/loginAndRegistration.html
@@ -132,7 +132,7 @@ Student 3:Duncan Robertson. Student number: 8074833 -->
                   <input name="password" required="required" type="password" placeholder="Password" id="password"/> 
                 </p>
                 <p class="keeplogin"> 
-  							  <span><a style="text-decoration:none; font-size: 14px; font-style: italic;" href="/forgotPassword">Forgot password ?</a></span>
+  							  <span><a style="text-decoration:none; font-size: 14px; font-style: italic;" href="forgotPassword.html">Forgot password ?</a></span>
   						  </p>
                 <p class="login button"> 
                   <input type="submit" value="Login"/> 
