Add post details

--- a/client/views/postDetails.html
+++ b/client/views/postDetails.html
@@ -19,25 +19,52 @@ Duncan Robertson. Student number: 8074833 -->
   <link rel="icon" href="http://www.webdesignerdepot.com/favicon.ico">
   <link rel="stylesheet" type="text/css" href="../css/postDetails.css">
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Wellfleet">
+  <!-- Adds CSS -->
+    <link href="../css/instagramClone.css" rel="stylesheet" type="text/css">
+    
+    <!-- Adds JQuery -->
+    <script src="../js/jquery-3.2.1.min.js"></script>
+  <script>
+    /*global $*/
+    function loadPage() {
+        var id = window.location.href.split("=")[1];
+        Promise.resolve()
+        .then(() => {
+          return $.post('/server/searchPost.php', {id: id});
+        })
+        .then((post) => {
+          setPostContent(post);
+        })
+        
+      function setPostContent(post){
+        var postContent = post[0];
+        $('#status').html(postContent.status);
+        $('#hashTag').html(postContent.hashTag);
+        $('#image').attr("src","../img/instagram_img/" + postContent.image);
+        $('#likeCount').html(postContent.likeCount);
+        $('#feedbackCount').html(postContent.feedbackCount);
+      }
+      }
+    </script>
 </head>
 
-<body>
+<body onload="loadPage();">
   <div id="w">
     <div class="buffer">
       <div id="header">
-        <h1><%= status %></h1>
-        <h3><%= hashtags %></h3>
+        <h1><a id="status"></a></h1>
+        <h3><a id="hashTag"></a></h3>
       </div>
     </div>
     <div id="imageContent">
-      <img src=<%= imagePath %>>
+      <img id="image" src="">
     </div>
     
     <div class="buffer">
       <div id="stats">
         <h2>
-          <img src="../img/icons/icon2.png" id="like"  height="15px" alt="Likes"> <%= likes %>
-          <img style="margin-left:20px;" src="../img/icons/icon5.png" id="feedback"  height="15px" alt="Feedbacks"> <%= feedbackCount %>
+          <img src="../img/icons/icon2.png" id="like"  height="15px" alt="Likes"> <a id="likeCount"></a>
+          <img style="margin-left:20px;" src="../img/icons/icon5.png" id="feedback"  height="15px" alt="Feedbacks"> <a id="feedbackCount"></a>
         </h2>
       </div>
     </div>
