--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -17,10 +17,7 @@
 <script>
   /*global $*/
   $('#logout').click( () => {
-    $.post('/logout')
-    .done( () => {
-      window.location.replace('/login');
-    });
+    $.post('/server/logout.php');
   });
   
   $('#home').click( () => {
